Fix z-index on home page

--- a/wp-content/themes/csisnuclearnetwork/assets/_scss/pages/home.scss
+++ b/wp-content/themes/csisnuclearnetwork/assets/_scss/pages/home.scss
@@ -370,7 +370,7 @@
     &-top-bg,
     &-bottom-bg {
       position: absolute;
-      @include z-index(hpBackgroundBubbles);
+      // @include z-index(hpBackgroundBubbles);
       width: 100%;
       height: 100%;
       margin-left: -6vw;
@@ -423,8 +423,8 @@
   }
 
   &__container {
-    position: relative;
-    z-index: 5;
+    // position: relative;
+    // z-index: 5;
     max-width: $size__content-wide-max-width;
     margin-right: auto;
     margin-left: auto;
